修改requests_wos中检索结果为0和检索结果过万出现的bug

--- a/supervisor_server.conf
+++ b/supervisor_server.conf
@@ -16,10 +16,10 @@ autorestart=true
 stdout_logfile=/home/zxb/workspace/paper_down_server/log/supervisord.log          #这里你可能需要先创建log路径
 # 输出的错误文件
 stderr_logfile=/home/zxb/workspace/paper_down_server/log/supervisord.err            #同上
-
+stopsignal=KILL
 [supervisord]
 # log的级别
-loglevel=info
+loglevel=error
 
 
 
